Adjust spacing and fix error

--- a/hackerstash/static/scss/pages/_leaderboard.scss
+++ b/hackerstash/static/scss/pages/_leaderboard.scss
@@ -31,6 +31,10 @@
         &:empty {
           display: none;
         }
+
+        .prize {
+          margin-top: 1rem;
+        }
       }
     }
   }
